--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,8 @@
   <package id="DotNetNuke.Core" version="9.1.1.129" targetFramework="net452" />
   <package id="DotNetNuke.Instrumentation" version="9.1.1.129" targetFramework="net452" />
   <package id="DotNetNuke.Web" version="9.1.1.129" targetFramework="net452" />
+  <package id="DotNetNuke.Web.Client" version="9.1.1.129" targetFramework="net452" />
+  <package id="DotNetNuke.Web.Deprecated" version="9.1.1.129" targetFramework="net452" />
   <package id="DotNetNuke.WebApi" version="9.1.1.129" targetFramework="net452" />
   <package id="MSBuildTasks" version="1.5.0.235" targetFramework="net452" developmentDependency="true" />
 </packages>
