--- a/DotNetNuke.Announcements.csproj
+++ b/DotNetNuke.Announcements.csproj
@@ -80,15 +80,6 @@
     <PublishDatabases>false</PublishDatabases>
   </PropertyGroup>
   <ItemGroup>
-    <Import Include="DotNetNuke" />
-    <Import Include="DotNetNuke.Common" />
-    <Import Include="DotNetNuke.Common.Utilities" />
-    <Import Include="DotNetNuke.Data" />
-    <Import Include="DotNetNuke.Entities.Users" />
-    <Import Include="DotNetNuke.Framework" />
-    <Import Include="DotNetNuke.Services.Exceptions" />
-    <Import Include="DotNetNuke.Services.Localization" />
-    <Import Include="DotNetNuke.UI" />
     <Import Include="Microsoft.VisualBasic" />
     <Import Include="System" />
     <Import Include="System.Collections" />
@@ -206,7 +197,6 @@
     <Content Include="Templates\SimpleAnnouncements\template.xml" />
     <Content Include="AnnouncementsView.ascx" />
     <Content Include="AnnouncementsSettings.ascx" />
-    <Content Include="_Dependencies\ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_LocalResources\AnnouncementsView.ascx.resx">
@@ -271,6 +261,7 @@
     <None Include="packages\MSBuildTasks.1.5.0.235\tools\MSBuild.Community.Tasks.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
@@ -315,14 +306,14 @@
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
     </Reference>
-    <Reference Include="DotNetNuke.Web.Client, Version=9.1.1.3, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="DotNetNuke.Web.Client, Version=9.1.1.129, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\DotNetNuke.Web.Client.9.1.1.129\lib\net40\DotNetNuke.Web.Client.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\bin\DotNetNuke.Web.Client.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="DotNetNuke.Web.Deprecated, Version=9.1.1.3, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="DotNetNuke.Web.Deprecated, Version=9.1.1.129, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\DotNetNuke.Web.Deprecated.9.1.1.129\lib\net40\DotNetNuke.Web.Deprecated.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\bin\DotNetNuke.Web.Deprecated.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="DotNetNuke.WebControls">
@@ -332,10 +323,6 @@
     <Reference Include="DotNetNuke.WebUtility, Version=4.2.1.783, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\DotNetNuke.Web.9.1.1.129\lib\net40\DotNetNuke.WebUtility.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="FiftyOne.Foundation">
-      <HintPath>packages\DotNetNuke.Bundle.9.1.1.129\lib\FiftyOne.Foundation.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.ApplicationBlocks.Data, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -362,8 +349,8 @@
     </Reference>
     <Reference Include="System.XML" />
     <Reference Include="Telerik.Web.UI, Version=2013.2.717.40, Culture=neutral, PublicKeyToken=121fae78165ba3d4, processorArchitecture=MSIL">
+      <HintPath>packages\DotNetNuke.Web.Deprecated.9.1.1.129\lib\net40\Telerik.Web.UI.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\bin\Telerik.Web.UI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="WebFormsMvp, Version=1.4.1.0, Culture=neutral, PublicKeyToken=537f18701145dff0, processorArchitecture=MSIL">
