Updates Dnn dependencies to v9.4.0

--- a/packages.config
+++ b/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DotNetNuke.Bundle" version="9.1.1.129" targetFramework="net452" />
-  <package id="DotNetNuke.Core" version="9.1.1.129" targetFramework="net452" />
-  <package id="DotNetNuke.Instrumentation" version="9.1.1.129" targetFramework="net452" />
-  <package id="DotNetNuke.Web" version="9.1.1.129" targetFramework="net452" />
-  <package id="DotNetNuke.Web.Client" version="9.1.1.129" targetFramework="net452" />
-  <package id="DotNetNuke.Web.Deprecated" version="9.1.1.129" targetFramework="net452" />
-  <package id="DotNetNuke.WebApi" version="9.1.1.129" targetFramework="net452" />
+  <package id="DotNetNuke.Core" version="9.4.0" targetFramework="net452" />
+  <package id="DotNetNuke.Instrumentation" version="9.4.0" targetFramework="net452" />
+  <package id="DotNetNuke.Web" version="9.4.0" targetFramework="net452" />
+  <package id="DotNetNuke.Web.Client" version="9.4.0" targetFramework="net452" />
+  <package id="DotNetNuke.Web.Deprecated" version="9.4.0" targetFramework="net452" />
+  <package id="DotNetNuke.WebApi" version="9.4.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="MSBuildTasks" version="1.5.0.235" targetFramework="net452" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
 </packages>
