Removed old build scripts (MSBuild) and created new Nuke build project

--- a/src/DotNetNuke.Announcements.csproj
+++ b/src/DotNetNuke.Announcements.csproj
@@ -62,6 +62,7 @@
     <DebugType>full</DebugType>
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <Prefer32Bit>false</Prefer32Bit>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>bin\</OutputPath>
@@ -79,6 +80,7 @@
     <DebugType>none</DebugType>
     <Prefer32Bit>false</Prefer32Bit>
     <PublishDatabases>false</PublishDatabases>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -223,11 +225,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DotNetNuke.Announcements.dnn">
-      <SubType>Designer</SubType>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Installation\Project.targets">
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
