--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,9 +28,9 @@ on:
       - '*'
 
 jobs:
-  ubuntu-22_04:
-    name: ubuntu-22_04
-    runs-on: ubuntu-22.04
+  windows-latest:
+    name: windows-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
         with:
